--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -19,4 +19,4 @@ jobs:
           npm run next:build
           npm run test
         env:
-          NODE_ENV=development
+          NODE_ENV: development
