--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -13,10 +13,11 @@ jobs:
         uses: actions/setup-node@v1
         with: 
           node-version: ${{ matrix.node-version }}
-      - name: install, lint, build, and test
-        run: |
-          npm ci
-          npm run next:build
-          npm run test
+      - name: npm install
+        run: npm ci
+      - name: npm run next:build
+        run: npm run next:build
+      - name: npm run test
+        run: npm run test
         env:
           NODE_ENV: development
