chore: added esdoc to dev environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,11 @@ services:
     working_dir: /usr/chapter/
     ports:
       - '8001:8001'
+  esdoc:
+    image: node:10-alpine
+    command: 'npm run esdoc'
+    volumes:
+      - .:/usr/chapter/
+    working_dir: /usr/chapter/
+    ports: 
+      - '8002:8002'
