--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "doc": "docs"
   },
   "scripts": {
+    "esdoc:build": "npx esdoc",
+    "esdoc:start": "npx live-server --port=8002 ./docs/esdoc --quiet",
+    "esdoc:watch": "npx nodemon --exec 'npm run esdoc:build' --watch client --watch server --watch pages --watch types",
+    "esdoc": "npm run esdoc:watch & npm run esdoc:start",
     "dev:server": "ts-node --files  --transpile-only --project ./tsconfig.server.json ./server/index.ts",
     "dev": "npx nodemon --watch 'server/**/*.ts' --exec 'npm run dev:server'",
     "lint": "eslint './**/*.{ts,tsx,js,jsx}'",
@@ -61,6 +65,8 @@
     "@types/react-dom": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-config-react": "^1.1.7",
@@ -69,6 +75,7 @@
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "lint-staged": "^9.4.2",
+    "live-server": "^1.2.1",
     "node-typescript": "^0.1.3",
     "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
@@ -84,6 +91,21 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "esdoc": {
+    "source": ".",
+    "includes": [
+      "pages, server, client"
+    ],
+    "excludes": [
+      "node_modules"
+    ],
+    "destination": "./docs/esdoc",
+    "plugins": [
+      {
+        "name": "esdoc-standard-plugin"
+      }
+    ]
   },
   "jest": {
     "watchPathIgnorePatterns": [
